# metamaskbridge

./: CMakeLists.txt  Makefile  README.txt  a.out.js  a.out.wasm  bundle.js  bundle2.js  crypto_guard_if.c  crypto_guard_if.js  crypto_guard_if.wasm  crypto_guard_if.wasm.debug.wasm  crypto_guard_if.wasm.map  crypto_guard_if11.wasm  exported.c  exported.js  exported.wasm  index.html
Examples/: a.out.js  a.out.wasm  bundle.js  crypto_guard_if.js  crypto_guard_if.wasm  crypto_guard_if.wasm.debug.wasm  crypto_guard_if.wasm.map  crypto_guawrd_if.wasm  exported.c  exported.wasm  index.html  ll
Examples/debug_src/: crypto_guard_if.c  twi_apdu_parser_composer.c  twi_common.c  twi_debug.c  twi_usb_link_layer.c  twi_usb_wallet_if.c
Examples/wasm-test/: crypto_guard_if.wasm  exported.js  exported.wasm  index.html  script.js
debug_src/: crc_16.c  crypto_guard_if.c  twi_link_layer.c  twi_network_layer.c  twi_no_security_layer.c  twi_stack.c  twi_usb_link_layer.c  twi_usb_wallet_if.c
ledg/: bundle.js
